# AlgoVault

./: .gitignore  .gitmodules  CNAME  Create_Script.py  README.md  requirements.txt
AquaQ/: AquaQ_challenge.json  Cargo.toml  Run_AquaQ.py  runAquaQ.py  runAquaQ.rs
AquaQ/Challenge_00/: AquaQ_00.py
AquaQ/Challenge_01/: AquaQ_01.py
AquaQ/analysis/: AquaQ_results.txt
Benchmarks/: execute_challenge.py  performance_analysis.py  script_runner.py  visualization.py
Benchmarks.egg-info/: PKG-INFO
Codyssi/2025/: Codyssi_Run_Summary.txt  Codyssi_challenge.json  README_Codyssi2025.md  Run_Codyssi.py
MNG/: LogicMill.py  MNG_ARENA.js  MNG_Run_Summary.txt  MNG_challenge.json  ReadME_MNG.md  Run_MNG.py  TM_Modules.py  TuringMachine.py  test_machine.ipynb
MNG/00/: AltMNGDay00.py  MNGDay00.js  MNGDay00.py
MNG/01/: AltMNGDay01.py  MNGDay01.js  unary_addition.txt
MNG/02/: MNGDay02.js  MNGDay02.py
MNG/03/: AltMNGDay03.py  MNGDay03.js  unary_binary_inc.txt
MNG/04/: AltMNGDay04.py  MNGDay04.js
MNG/05/: MNGDay05.js  unary_array.txt
MNG/06/: MNGDay06.js  unary_subtraction.txt
MNG/07/: MNGDay07.js  letter_mark.txt
MNG/08/: MNGDay08.js  text_mirror.txt
MNG/09/: MNGDay09.js  unary_comparison.txt
Polyglot_Setups/: Setup_JS.py  Setup_Python.py
data_onion/: abbas_onion.ipynb
i18n/: README_i18n.md  Run_i18n.py  i18n_Run_Summary.txt  i18n_challenge.json
synacor/: EquationParser.py  README_synacor.md  SynacorConsole.py  VM_Disassembler.py  VirtualMachine.py  synacor_run.ipynb  synacor_vm.ipynb  version_table.txt  version_testing.py  virtual_machine.py
(+157 files in other folders)
