[package]
name = "AquaQ"
version = "0.1.0"
edition = "2024"
default-run = "run_all"

[dependencies]

[[bin]]
name = "run_all"
path = "runAquaQ.rs"

[[bin]]
name = "AquaQ_00"
path = "src/bin/AquaQ_00.rs"

[[bin]]
name = "AquaQ_01"
path = "src/bin/AquaQ_01.rs"

[profile.dev]
debug = 0   # 🚫 no debug info → no .pdb files
